feat: completed BYOD using easy_ocr and API added to wisdomaiengine.py

--- a/BringYourOwnDocument.ipynb
+++ b/BringYourOwnDocument.ipynb
@@ -345,26 +345,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import the necessary packages\n",
     "import cv2\n",
     "import numpy as np\n",
-    "import pytesseract\n",
     "import re\n",
     "import requests\n",
     "import io\n",
-    "from pdfminer.pdfinterp import PDFResourceManager, PDFPageInterpreter\n",
-    "from pdfminer.converter import TextConverter\n",
-    "from pdfminer.layout import LAParams\n",
-    "from pdfminer.pdfpage import PDFPage"
+    "from easy_ocr import ocr_image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,121 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "finer is one of the fastest-growing companies of all time. Its name comes from “group coupons,” an ingenious idea that has spawned an entire industry of social commerce imitators. However, it didnt start out successful. When customers took Groupon up on its first deal, a whopping twenty people bought two-for-one pizza in a restaurant on the first floor of the company’s Chicago offices—hardly a world-changing event. In fact, Groupon wasn't originally meant to be about commerce at all. The founder, Andrew Mason, intended his company to become a “collective activism platform” called The Point. Its goal was to bring people together to solve problems they couldn’t solve on their own, such as fund-raising for a cause or boycotting a certain retailer. The Point's early results were disappointing, however, and at the end of 2008 the founders decided to try something new. Although they still had grand ambitions, they were determined to keep the new product simple. They built a minimum viable product. Does this sound like a billion-dollar company to you? Mason tells the story: We took a WordPress Blog and we skinned it to say Groupon and then every day we would do a new post. It was totally ghetto. We would sell T-shirts on the first\n"
-     ]
-    }
-   ],
-   "source": [
-    "# extract text\n",
-    "text = pytesseract.image_to_string(thresh, config=custom_config)\n",
-    "# format for presentation\n",
-    "text = re.sub(\"\\n\\n\", \" \", text)\n",
-    "text = re.sub(\"-\\n\", \"\", text)\n",
-    "text = re.sub(\"\\n\", \" \", text)\n",
-    "print(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from wisdomaiengine import summarisepdfdocument"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "summary = summarisepdfdocument(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['When customers took Groupon up on its first deal, a whopping twenty people bought two-for-one pizza in a restaurant on the first floor of the company’s Chicago offices—hardly a world-changing event.',\n",
-       " 'The founder, Andrew Mason, intended his company to become a “collective activism platform” called The Point.',\n",
-       " 'Its goal was to bring people together to solve problems they couldn’t solve on their own, such as fund-raising for a cause or boycotting a certain retailer.',\n",
-       " \"The Point's early results were disappointing, however, and at the end of 2008 the founders decided to try something new.\",\n",
-       " 'Mason tells the story: We took a WordPress Blog and we skinned it to say Groupon and then every day we would do a new post.']"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "summary"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,114 +441,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import img2pdf\n",
-    "\n",
-    "pdf_name = filename.split(\".\")[0]+\".pdf\"\n",
-    "with open(pdf_name, \"wb\") as f:\n",
-    "    f.write(img2pdf.convert(filename))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rsrcmgr = PDFResourceManager()\n",
-    "retstr = io.StringIO()\n",
-    "codec = 'utf-8'\n",
-    "laparams = LAParams()\n",
-    "device = TextConverter(rsrcmgr, retstr, codec=codec, laparams=laparams)\n",
-    "fp = open(\"test.pdf\", 'rb')\n",
-    "interpreter = PDFPageInterpreter(rsrcmgr, device)\n",
-    "caching = True\n",
-    "\n",
-    "for page in PDFPage.get_pages(fp, caching=caching, check_extractable=True):\n",
-    "    interpreter.process_page(page)\n",
-    "    \n",
-    "text = retstr.getvalue()\n",
-    "\n",
-    "fp.close()\n",
-    "device.close()\n",
-    "retstr.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\x0c'"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "text = ocr_image(\"test.png\", service='youdao')\n",
+    "text = \" \".join(i for i in text)\n",
+    "text = re.sub(\"- \", \"\", text)\n",
     "text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tika import parser"
+    "from wisdomaiengine import summarisepdfdocument, bringyourowndocument"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = \"page6.jpg\"\n",
+    "text = bringyourowndocument(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-01-30 12:09:54,028 [MainThread  ] [INFO ]  Retrieving http://search.maven.org/remotecontent?filepath=org/apache/tika/tika-server/1.23/tika-server-1.23.jar.md5 to /var/folders/f8/nj2cglwj7_1938gn9wydpwzh0000gn/T/tika-server.jar.md5.\n",
-      "INFO:tika.tika:Retrieving http://search.maven.org/remotecontent?filepath=org/apache/tika/tika-server/1.23/tika-server-1.23.jar.md5 to /var/folders/f8/nj2cglwj7_1938gn9wydpwzh0000gn/T/tika-server.jar.md5.\n",
-      "2020-01-30 12:09:54,407 [MainThread  ] [INFO ]  Retrieving http://search.maven.org/remotecontent?filepath=org/apache/tika/tika-server/1.23/tika-server-1.23.jar to /var/folders/f8/nj2cglwj7_1938gn9wydpwzh0000gn/T/tika-server.jar.\n",
-      "INFO:tika.tika:Retrieving http://search.maven.org/remotecontent?filepath=org/apache/tika/tika-server/1.23/tika-server-1.23.jar to /var/folders/f8/nj2cglwj7_1938gn9wydpwzh0000gn/T/tika-server.jar.\n",
-      "2020-01-30 12:10:12,235 [MainThread  ] [WARNI]  Failed to see startup log message; retrying...\n",
-      "WARNING:tika.tika:Failed to see startup log message; retrying...\n",
-      "2020-01-30 12:10:17,243 [MainThread  ] [WARNI]  Failed to see startup log message; retrying...\n",
-      "WARNING:tika.tika:Failed to see startup log message; retrying...\n",
-      "2020-01-30 12:10:22,248 [MainThread  ] [WARNI]  Failed to see startup log message; retrying...\n",
-      "WARNING:tika.tika:Failed to see startup log message; retrying...\n",
-      "2020-01-30 12:10:27,254 [MainThread  ] [ERROR]  Tika startup log message not received after 3 tries.\n",
-      "ERROR:tika.tika:Tika startup log message not received after 3 tries.\n",
-      "2020-01-30 12:10:27,257 [MainThread  ] [ERROR]  Failed to receive startup confirmation from startServer.\n",
-      "ERROR:tika.tika:Failed to receive startup confirmation from startServer.\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Unable to start Tika server.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-61-c822b5e868eb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mraw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'test.pdf'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Applications/anaconda3/envs/py3/lib/python3.7/site-packages/tika/parser.py\u001b[0m in \u001b[0;36mfrom_file\u001b[0;34m(filename, service, serverEndpoint, xmlContent, headers, config_path, requestOptions)\u001b[0m\n\u001b[1;32m     34\u001b[0m     '''\n\u001b[1;32m     35\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mxmlContent\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparse1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mservice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mserverEndpoint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mheaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequestOptions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrequestOptions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         output = parse1(service, filename, serverEndpoint, services={'meta': '/meta', 'text': '/tika', 'all': '/rmeta/xml'},\n",
-      "\u001b[0;32m/Applications/anaconda3/envs/py3/lib/python3.7/site-packages/tika/tika.py\u001b[0m in \u001b[0;36mparse1\u001b[0;34m(option, urlOrPath, serverEndpoint, verbose, tikaServerJar, responseMimeType, services, rawResponse, headers, config_path, requestOptions)\u001b[0m\n\u001b[1;32m    329\u001b[0m         status, response = callServer('put', serverEndpoint, service, f,\n\u001b[1;32m    330\u001b[0m                                       \u001b[0mheaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtikaServerJar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 331\u001b[0;31m                                       rawResponse=rawResponse, requestOptions=requestOptions)\n\u001b[0m\u001b[1;32m    332\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    333\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfile_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'remote'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munlink\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Applications/anaconda3/envs/py3/lib/python3.7/site-packages/tika/tika.py\u001b[0m in \u001b[0;36mcallServer\u001b[0;34m(verb, serverEndpoint, service, data, headers, verbose, tikaServerJar, httpVerbs, classpath, rawResponse, config_path, requestOptions)\u001b[0m\n\u001b[1;32m    522\u001b[0m     \u001b[0;32mglobal\u001b[0m \u001b[0mTikaClientOnly\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    523\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mTikaClientOnly\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 524\u001b[0;31m         \u001b[0mserverEndpoint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheckTikaServer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscheme\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mserverHost\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mport\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtikaServerJar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclasspath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    525\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    526\u001b[0m     \u001b[0mserviceUrl\u001b[0m  \u001b[0;34m=\u001b[0m \u001b[0mserverEndpoint\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mservice\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Applications/anaconda3/envs/py3/lib/python3.7/site-packages/tika/tika.py\u001b[0m in \u001b[0;36mcheckTikaServer\u001b[0;34m(scheme, serverHost, port, tikaServerJar, classpath, config_path)\u001b[0m\n\u001b[1;32m    592\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mstatus\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    593\u001b[0m                 \u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Failed to receive startup confirmation from startServer.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 594\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Unable to start Tika server.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    595\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mserverEndpoint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    596\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Unable to start Tika server."
-     ]
+     "data": {
+      "text/plain": [
+       "\"When customers took Groupon up on its first deal, a whopping twenty people bought (wo-for-one pizza in a restaurant on the frst Aoor of thecompany's Chicago offices--hardly a world-changing event. The founder, Andrew Mason, intended hiscompany to become a“collective activism platform”called The Point. Its goal was to bring pcople together to solve problems they couldn't solve on their own, such as fund-raisingfora cause or boycotting a certain rctailer. The Point's earlyresults were disappointing, however, and at the end of 2008 the founders decided to try something new. Mason tells thestory We took a WordPress Blog and we skinnedittosay Ciroupon and then every day we would do a new post It was totally ghetto.\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "raw = parser.from_file('test.pdf')"
+    "summarisepdfdocument(text)"
    ]
   },
   {
@@ -675,22 +496,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from fpdf import FPDF\n",
-    "# pdf = FPDF()\n",
-    "# imagelist = [filename]\n",
-    "# # imagelist is the list with all image filenames\n",
-    "# for image in imagelist:\n",
-    "#     pdf.add_page()\n",
-    "#     pdf.image(image,x,y,w,h)\n",
-    "# pdf.output(\"yourfile.pdf\", \"F\")"
-   ]
   }
  ],
  "metadata": {
