--- a/BringYourOwnDocument.ipynb
+++ b/BringYourOwnDocument.ipynb
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,16 +472,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"When customers took Groupon up on its first deal, a whopping twenty people bought (wo-for-one pizza in a restaurant on the frst Aoor of thecompany's Chicago offices--hardly a world-changing event. The founder, Andrew Mason, intended hiscompany to become a“collective activism platform”called The Point. Its goal was to bring pcople together to solve problems they couldn't solve on their own, such as fund-raisingfora cause or boycotting a certain rctailer. The Point's earlyresults were disappointing, however, and at the end of 2008 the founders decided to try something new. Mason tells thestory We took a WordPress Blog and we skinnedittosay Ciroupon and then every day we would do a new post It was totally ghetto.\""
+       "\"finer is one of the fastest-growing companies of all time. Its name comes from “group coupons,” an ingenious idea that has spawned an entire industry of social commerce imitators. However, it didnt start out successful. When customers took Groupon up on its first deal, a whopping twenty people bought two-for-one pizza in a restaurant on the first floor of the com- pany’s Chicago offices—hardly a world-changing event.  In fact, Groupon wasn't originally meant to be about com- merce at all. The founder, Andrew Mason, intended his com- pany to become a “collective activism platform” called The Point. Its goal was to bring people together to solve problems they couldn’t solve on their own, such as fund-raising for a cause or boycotting a certain retailer. The Point's early re- sults were disappointing, however, and at the end of 2008 the founders decided to try something new. Although they still had grand ambitions, they were determined to keep the new product simple. They built a minimum viable product. Does  this sound like a billion-dollar company to you? Mason tells the story:  We took a WordPress Blog and we skinned it to say Groupon and then every day we would do a new post. It was totally ghetto. We would sell T-shirts on the first\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"When customers took Groupon up on its first deal, a whopping twenty people bought two-for-one pizza in a restaurant on the first floor of the com- pany’s Chicago offices—hardly a world-changing event. The founder, Andrew Mason, intended his com- pany to become a “collective activism platform” called The Point. Its goal was to bring people together to solve problems they couldn’t solve on their own, such as fund-raising for a cause or boycotting a certain retailer. The Point's early re- sults were disappointing, however, and at the end of 2008 the founders decided to try something new. Mason tells the story:  We took a WordPress Blog and we skinned it to say Groupon and then every day we would do a new post.\""
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
