--- a/SummariseAPI.ipynb
+++ b/SummariseAPI.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greek_symbols = \"ΔΩπϴλθ°îĵk̂ûαβγδεζηθικλμνξοπρςστυφχψωΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩϴ\""
+    "escapes = \"ΔΩπϴλθ°îĵk̂ûαβγδεζηθικλμνξοπρςστυφχψωΓΔΘΛΞΠΣΦΨΩϴ≤=\""
    ]
   },
   {
@@ -39,10 +39,10 @@
     "# get bytes stream of web pdf\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
     "#pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
-    "#pdfurl = \"https://arxiv.org/pdf/2001.09956\"\n",
+    "pdfurl = \"https://arxiv.org/pdf/2001.09956\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
     "#pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
-    "pdfurl = \"https://arxiv.org/pdf/2001.10393.pdf\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.10393.pdf\"\n",
     "r = requests.get(pdfurl, stream=True)\n",
     "f = io.BytesIO(r.content)"
    ]
@@ -249,6 +249,11 @@
    "source": [
     "# remove citations\n",
     "clean5 = \" \".join(c for c in clean4)\n",
+    "clean5 = re.sub(\"\\(cid:\\d\\d\\)\", \"\", clean5)\n",
+    "clean5 = re.sub(\"\\(cid:\\d\\)\", \"\", clean5)\n",
+    "clean5 = re.sub(\"cid:\", \"\", clean5)\n",
+    "clean5 = re.sub(\"cid:\", \"\", clean5)\n",
+    "clean5 = re.sub(\"cid\", \"\", clean5)\n",
     "clean5 = re.sub(\"^\\[\\d\\]\", \"\", clean5)\n",
     "clean5 = re.sub(\"^\\[\\d\\d\\]\", \"\", clean5)\n",
     "clean5 = re.sub(\"^\\[\\d\\d\\]\", \"\", clean5)\n",
@@ -263,11 +268,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "blob = TextBlob(clean5)\n",
+    "sentences = [str(sentence) for sentence in blob.sentences]\n",
+    "# remove sentences with math\n",
+    "no_math = []\n",
+    "for sentence in sentences:\n",
+    "    cnt = 0\n",
+    "    for symbol in escapes:\n",
+    "        if symbol in sentence:\n",
+    "            cnt += 1\n",
+    "    if cnt == 0:\n",
+    "        no_math.append(sentence)\n",
+    "# remove sentences with \"Figure X:\" or \"Fig X:\"\"\n",
+    "no_figs = []\n",
+    "for sentence in no_math:\n",
+    "    if re.search(\"Figure \\d:\", sentence):\n",
+    "        pass\n",
+    "    elif re.search(\"Fig. \\d:\", sentence):\n",
+    "        pass\n",
+    "    elif re.search(\"Fig \\d:\", sentence):\n",
+    "        pass\n",
+    "    else:\n",
+    "        no_figs.append(sentence)\n",
+    "sentences = \" \".join(n for n in no_figs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Summarisation of top 5 key points\n",
     "key_points = 5\n",
     "summary = []\n",
-    "blob = TextBlob(clean5)\n",
-    "sentences = [str(sentence) for sentence in blob.sentences]\n",
+    "blob = TextBlob(sentences)\n",
+    "sentences = [str(sentence) for sentence in blob.sentences]  \n",
     "for sentence in sentences:\n",
     "    if sentence.find(\":\", 0, 1) != -1 and sentence.find(\"-\", 1, 3) != -1:\n",
     "        pass\n",
@@ -285,6 +321,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -294,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,27 +388,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For the 2013 and 2014 episodes, which had the best Swift sampling, we ﬁnd that the correlation between the UV/optical and X-ray ﬂuxes is signiﬁcantly steeper during the decay (soft state) of the outburst than during the rise (hard-to-soft state). For each of our selected observations, we obtained the X-ray spectra and the associated response ﬁles using the online XRT data products tool1, which uses the latest version of the Swift software and calibration (Evans et al. 2009). We searched the Swift data archive for outbursts of Aql X-1 that had i) good sampling of the entire outburst with the X-ray Telescope (XRT) and ii) observations in one or more UV ﬁlters on the UltraViolet and Optical Telescope (UVOT) consistently taken along the entire outburst. To have some sense of the X-ray spectral evolution along the outbursts, we include the daily-averaged 15–50 keV light curves obtained from the Swift/BAT transient monitor project (Krimm et al. 2013) and the changes in the hardness ratio (HR) in Figure 1. We see that the BAT 15–50 keV peak occurs during the rise of the three outbursts, after which there is a drop of the BAT ﬂux that we can identify with the source entering the soft state.\n"
+      "For the 2013 and 2014 episodes, which had the best Swift sampling, we ﬁnd that the correlation between the UV/optical and X-ray ﬂuxes is signiﬁcantly steeper during the decay (soft state) of the outburst than during the rise (hard-to-soft state). \n",
+      "\n",
+      "Rapid rotation rates on the order of hundreds of Hz are common for NS LMXBs (see Patruno et al. 2017a, for a recent overview of measured spin periods), and are thought to be a result of the angular momentum transfer involved in the accretion process (e.g. Alpar et al. 1982; Wijnands & van der Klis 1998). \n",
+      "\n",
+      "The aim of our study is to understand the origin of the UV/optical emission in this LMXB, and to investigate whether different types of FRED outbursts behave in the same way. \n",
+      "\n",
+      "For each of our selected observations, we obtained the X-ray spectra and the associated response ﬁles using the online XRT data products tool1, which uses the latest version of the Swift software and calibration (Evans et al. 2009). \n",
+      "\n",
+      "From these light curves (ﬁrst two subplots of each outburst) it can be seen that the 2013 and 2016 outbursts had very similar duration and maximum ﬂux, belonging to the long and bright class of FRED, whereas the 2014 outburst was fainter and shorter (see also Waterhouse et al. 2016; Ootes et al. 2018). \n",
+      "\n"
      ]
     }
    ],
-   "source": [
-    "summary = summarisepdfdocument(text)\n",
-    "print(summary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "summary = summarisepdfdocument(text)\n",
     "for i in summary:\n",
