feat: adding cropping to BYOD

--- a/BringYourOwnDocument.ipynb
+++ b/BringYourOwnDocument.ipynb
@@ -7,12 +7,12 @@
    "outputs": [],
    "source": [
     "# import the necessary packages\n",
-    "from transform import four_point_transform\n",
+    "#from transform import four_point_transform\n",
     "from skimage.filters import threshold_local\n",
     "import numpy as np\n",
     "import argparse\n",
     "import cv2\n",
-    "import imutils\n",
+    "#import imutils\n",
     "import matplotlib.pyplot as plt\n",
     "import pytesseract"
    ]
@@ -355,7 +355,13 @@
     "import re\n",
     "import requests\n",
     "import io\n",
-    "from easy_ocr import ocr_image"
+    "from easy_ocr import ocr_image\n",
+    "import numpy as np\n",
+    "import argparse\n",
+    "import cv2\n",
+    "#import imutils\n",
+    "import pytesseract\n",
+    "from pytesseract import Output"
    ]
   },
   {
@@ -374,7 +380,8 @@
     " \n",
     "#thresholding\n",
     "def thresholding(image):\n",
-    "    return cv2.threshold(image, 0, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)[1]\n",
+    "    img = cv2.threshold(image, 0, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)[1]\n",
+    "    return img\n",
     "\n",
     "#dilation\n",
     "def dilate(image):\n",
@@ -435,9 +442,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"test.png\"\n",
-    "cv2.imwrite(filename, thresh);"
+    "words = pytesseract.image_to_data(thresh, output_type=Output.DICT)\n",
+    "word_boxes = len(words['level'])\n",
+    "left = thresh.shape[1]\n",
+    "right = 0\n",
+    "bottom = thresh.shape[0]\n",
+    "top = 0\n",
+    "for i in range(word_boxes):\n",
+    "    (x, y, w, h) = (words['left'][i], words['top'][i], words['width'][i], words['height'][i])\n",
+    "    if x < left:\n",
+    "        left = x\n",
+    "    if x+w > right:\n",
+    "        right = x+w\n",
+    "    if y < bottom:\n",
+    "        bottom = y\n",
+    "    if y+h > top:\n",
+    "        top = y+h"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crop_img = thresh[bottom:top, left:right]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.imwrite(\"test.png\", crop_img);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = pytesseract.image_to_string(crop_img)\n",
+    "text = re.sub(\"\\n\", \" \", text)\n",
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -498,7 +562,11 @@
     {
      "data": {
       "text/plain": [
-       "\"When customers took Groupon up on its first deal, a whopping twenty people bought two-for-one pizza in a restaurant on the first floor of the com- pany’s Chicago offices—hardly a world-changing event. The founder, Andrew Mason, intended his com- pany to become a “collective activism platform” called The Point. Its goal was to bring people together to solve problems they couldn’t solve on their own, such as fund-raising for a cause or boycotting a certain retailer. The Point's early re- sults were disappointing, however, and at the end of 2008 the founders decided to try something new. Mason tells the story:  We took a WordPress Blog and we skinned it to say Groupon and then every day we would do a new post.\""
+       "['When customers took Groupon up on its first deal, a whopping twenty people bought two-for-one pizza in a restaurant on the first floor of the com- pany’s Chicago offices—hardly a world-changing event.',\n",
+       " 'The founder, Andrew Mason, intended his com- pany to become a “collective activism platform” called The Point.',\n",
+       " 'Its goal was to bring people together to solve problems they couldn’t solve on their own, such as fund-raising for a cause or boycotting a certain retailer.',\n",
+       " \"The Point's early re- sults were disappointing, however, and at the end of 2008 the founders decided to try something new.\",\n",
+       " 'Mason tells the story:  We took a WordPress Blog and we skinned it to say Groupon and then every day we would do a new post.']"
       ]
      },
      "execution_count": 4,
