fix: removing 'abstract' word from summarise API results

--- a/SummariseAPI.ipynb
+++ b/SummariseAPI.ipynb
@@ -365,21 +365,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
+    "#pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
     "#pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.09956\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
-    "#pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
+    "pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.10393.pdf\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,22 +388,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For the 2013 and 2014 episodes, which had the best Swift sampling, we ﬁnd that the correlation between the UV/optical and X-ray ﬂuxes is signiﬁcantly steeper during the decay (soft state) of the outburst than during the rise (hard-to-soft state). \n",
+      "The Dynamic Scalability of resources, a problem in Infrastructure as a Service (IaaS) has been the hotspot for research and industry communities. \n",
       "\n",
-      "Rapid rotation rates on the order of hundreds of Hz are common for NS LMXBs (see Patruno et al. 2017a, for a recent overview of measured spin periods), and are thought to be a result of the angular momentum transfer involved in the accretion process (e.g. Alpar et al. 1982; Wijnands & van der Klis 1998). \n",
+      "With the help of this, not only dynamic infrastructure scaling can be achieved but it will minimize the response time of elastic demand and maximize the throughput of requests. \n",
       "\n",
-      "The aim of our study is to understand the origin of the UV/optical emission in this LMXB, and to investigate whether different types of FRED outbursts behave in the same way. \n",
+      "A different observation explained in [11] is that a new Cloud standard should not need a static configuration of software and hardware components because dynamic provision and de-allocation of resources as well as the pay-as-you-go model are the intrinsic types of these facilities. \n",
       "\n",
-      "For each of our selected observations, we obtained the X-ray spectra and the associated response ﬁles using the online XRT data products tool1, which uses the latest version of the Swift software and calibration (Evans et al. 2009). \n",
+      "The abbreviations used in these metrics are: MTBF: Mean Time between Failures, MTTF: Mean Time to Failure, MTTR: Mean Time to Repair and MTTC: Mean Time to Change with respect to particular Cloud Service. \n",
       "\n",
-      "From these light curves (ﬁrst two subplots of each outburst) it can be seen that the 2013 and 2016 outbursts had very similar duration and maximum ﬂux, belonging to the long and bright class of FRED, whereas the 2014 outburst was fainter and shorter (see also Waterhouse et al. 2016; Ootes et al. 2018). \n",
+      "The number of time periods required for a given proportion Flexible Capacity C: of the total uncertainties in a given service to collect. \n",
       "\n"
      ]
     }
