feat: removing bullet points from content and adding bullet at start of summary strings

--- a/SummariseAPI.ipynb
+++ b/SummariseAPI.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,10 +370,10 @@
    "outputs": [],
    "source": [
     "#pdfurl = \"https://arxiv.org/pdf/2001.09903.pdf\"\n",
-    "#pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
+    "pdfurl = \"http://arxiv.org/pdf/1811.04422v1\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.09956\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.09412.pdf\"\n",
-    "pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
+    "#pdfurl = \"http://arxiv.org/pdf/1411.6753v1\"\n",
     "#pdfurl = \"https://arxiv.org/pdf/2001.10393.pdf\""
    ]
   },
@@ -395,15 +395,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Dynamic Scalability of resources, a problem in Infrastructure as a Service (IaaS) has been the hotspot for research and industry communities. \n",
+      "• I describe an optimal control view of adversarial machine learning, where the dynamical system is the machine learner, the input are adversarial actions, and the control costs are deﬁned by the adversary’s goals to do harm and be hard to detect. \n",
       "\n",
-      "With the help of this, not only dynamic infrastructure scaling can be achieved but it will minimize the response time of elastic demand and maximize the throughput of requests. \n",
+      "• The system to be controlled is called the plant, which is deﬁned by the system dynamics: where xt ∈ Xt is the state of the system, ut ∈ Ut is the control input, and Ut is the control constraint set. \n",
       "\n",
-      "A different observation explained in [11] is that a new Cloud standard should not need a static configuration of software and hardware components because dynamic provision and de-allocation of resources as well as the pay-as-you-go model are the intrinsic types of these facilities. \n",
+      "• In all cases, the adversary attempts to control the machine learning system, and the control costs reﬂect the adversary’s desire to do harm and be hard to detect. \n",
       "\n",
-      "The abbreviations used in these metrics are: MTBF: Mean Time between Failures, MTTF: Mean Time to Failure, MTTR: Mean Time to Repair and MTTC: Mean Time to Change with respect to particular Cloud Service. \n",
+      "• The adversary’s running cost gt then measures the eﬀort in performing the action at step t. One limitation of the optimal control view is that the action cost is assumed to be additive over the steps. \n",
       "\n",
-      "The number of time periods required for a given proportion Flexible Capacity C: of the total uncertainties in a given service to collect. \n",
+      "• The adversary intercepts the environmental reward rIt in each iteration, and may choose to modify (“shape”) the reward into with some ut ∈ R before sending the modiﬁed reward to the learner. \n",
       "\n"
      ]
     }
